# my_msckf

./: README.md
my_msckf/devel/: .catkin  .rosinstall  local_setup.sh
my_msckf/devel/include/image_node/: CameraMeasurement.h  FeatureMeasurement.h
my_msckf/devel/include/msckf/: CameraMeasurement.h  FeatureMeasurement.h
my_msckf/devel/lib/msckf/: track_node
my_msckf/devel/lib/pkgconfig/: image_node.pc  msckf.pc  track_node.pc
my_msckf/devel/lib/python2.7/dist-packages/image_node/msg/: _CameraMeasurement.py  _FeatureMeasurement.py  __init__.py
my_msckf/devel/lib/python2.7/dist-packages/msckf/msg/: _CameraMeasurement.py  _FeatureMeasurement.py
my_msckf/devel/lib/track_node/: track_node
my_msckf/devel/share/common-lisp/ros/image_node/msg/: CameraMeasurement.lisp  FeatureMeasurement.lisp  _package.lisp  _package_CameraMeasurement.lisp  _package_FeatureMeasurement.lisp  image_node-msg.asd
my_msckf/devel/share/common-lisp/ros/msckf/msg/: CameraMeasurement.lisp  FeatureMeasurement.lisp  _package.lisp  _package_CameraMeasurement.lisp  _package_FeatureMeasurement.lisp  msckf-msg.asd
my_msckf/devel/share/gennodejs/ros/image_node/msg/: CameraMeasurement.js  FeatureMeasurement.js
my_msckf/devel/share/gennodejs/ros/msckf/msg/: CameraMeasurement.js  FeatureMeasurement.js  _index.js
my_msckf/devel/share/image_node/cmake/: image_node-msg-extras.cmake  image_node-msg-paths.cmake  image_nodeConfig.cmake
my_msckf/devel/share/msckf/cmake/: msckf-msg-paths.cmake  msckfConfig.cmake
my_msckf/devel/share/roseus/ros/image_node/: manifest.l
my_msckf/devel/share/roseus/ros/image_node/msg/: CameraMeasurement.l  FeatureMeasurement.l
my_msckf/devel/share/roseus/ros/msckf/: manifest.l
my_msckf/devel/share/roseus/ros/msckf/msg/: CameraMeasurement.l  (+1 more)
my_msckf/devel/share/track_node/cmake/: track_nodeConfig.cmake
my_msckf/src/msckf/: CMakeLists.txt  package.xml
my_msckf/src/msckf/config/: euroc.yaml
my_msckf/src/msckf/include/msckf/: camera.h  feature.h  image_node.h  math_utils.h  track_node.h
my_msckf/src/msckf/launch/: euroc.launch
my_msckf/src/msckf/msg/: FeatureMeasurement.msg
my_msckf/src/msckf/src/: image_node.cpp  track_node.cpp  utils.cpp
my_msckf/src/my_msckf/image_node/: CMakeLists.txt  package.xml
my_msckf/src/my_msckf/image_node/include/image_node/: imu.h  utils.h
my_msckf/src/my_msckf/image_node/launch/: euroc.launch
my_msckf/src/my_msckf/image_node/src/: image_node.cpp  utils.cpp
my_msckf/src/my_msckf/track_node/: CMakeLists.txt  package.xml
my_msckf/src/my_msckf/track_node/src/: cam_status.h  features.h  imu_status.h  track.cpp  track.h  track_node.cpp  utils.h
